# copilot-fanController

./: .gitignore  copilot-playground.cabal
app/: Main.hs
